added otp feature, forget password feature, and admin feature